--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "ghpages:docs" : "ng build --prod --output-path docs --base-href /cursoAngular/"
+    "ghpages:docs": "ng build --prod --output-path docs --base-href /cursoAngular/"
   },
   "private": true,
   "dependencies": {
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "angular-in-memory-web-api": "^0.11.0",
     "bootstrap": "^4.5.0",
+    "express": "^4.17.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
